Fix differential abundance raml and enable compute controller to handle more specific response types